--- a/poems/iou.html
+++ b/poems/iou.html
@@ -21,35 +21,37 @@
             </ul>
         </nav>
         <div class="poem-container">
-        <h1 class="poem-title">Front Porch Adagio</h1>
+        <h1 class="poem-title">i.o.u</h1>
         <p>
-            I'm not certain what it means to love,
-			<br/>
-            in a country that freely flings itself, 
-			<br/>
-            into sweaty palms of pestilence.
-			<br/>
-			<br/>
-            We live in the land of the free,
-			<br/>
-            but is there room in the inn,
-			<br/>
-            for those brave enough to choose life?
-			<br/>
-			<br/>
-            Or at least a meaningful death?
-			<br/>
-            I'd much rather observe than moralize,
-			<br/>
-            too often the weight leads me to agonize.
-			<br/>
-			<br/>
-            How can so many define,
-			<br/>
-            life's meaning as simply breathing,
-			<br/>
-            and not something more divine?
-			<br/>
+            What to do with all of this violence?
+            <br><br/>
+            El Paso    
+            <br><br/>
+            Dayton
+            <br><br/>
+            Las Vegas
+            <br><br/>
+            Newtown
+            <br><br/>
+            Parkland
+            <br><br/>
+            I’m certain I’m forgetting a few. 
+            <br><br/>
+            What to do with all of this violence and the rationalizations that ring out like echos from the shots themselves? 
+            <br><br/>
+            Do nothing warriors,
+            <br><br/>
+            with shields of logic (nothing about this is logical),
+            <br><br/>
+            and swords of hopelessness.
+            <br><br/>
+            They offer prayers like the conman offers I.O.Us
+            <br><br/>
+            Meanwhile we lay at our altars,
+            <br><br/>
+            turning at every sound,
+            <br><br/>
+            searching for the nearest exit.
 		</p>
         </div>
     </body>
