--- a/poems/superman.html
+++ b/poems/superman.html
@@ -21,35 +21,33 @@
             </ul>
         </nav>
         <div class="poem-container">
-        <h1 class="poem-title">Front Porch Adagio</h1>
+        <h1 class="poem-title">Superman</h1>
         <p>
-            I'm not certain what it means to love,
-			<br/>
-            in a country that freely flings itself, 
-			<br/>
-            into sweaty palms of pestilence.
-			<br/>
-			<br/>
-            We live in the land of the free,
-			<br/>
-            but is there room in the inn,
-			<br/>
-            for those brave enough to choose life?
-			<br/>
-			<br/>
-            Or at least a meaningful death?
-			<br/>
-            I'd much rather observe than moralize,
-			<br/>
-            too often the weight leads me to agonize.
-			<br/>
-			<br/>
-            How can so many define,
-			<br/>
-            life's meaning as simply breathing,
-			<br/>
-            and not something more divine?
-			<br/>
+            Internet said Superman was dead
+            <br><br/>
+            but maybe he’s on a break
+            <br><br/>
+            or packed up and went home.
+            <br><br/>
+            Now it’s just us.
+            <br><br/>
+            <br><br/>
+            I remember his cape
+            <br><br/>
+            every way that it moved
+            <br><br/>
+            when he passed by us passersby
+            <br><br/>
+            faster than we could think.
+            <br><br/>
+            <br><br/>
+            Maybe this will be the last day.
+            <br><br/>
+            Maybe this is what we’re left with,
+            <br><br/>
+            his villains and our hands.
+            <br><br/>
+            Superman died today.
 		</p>
         </div>
     </body>
