--- a/poems/today-we-found-out.html
+++ b/poems/today-we-found-out.html
@@ -21,35 +21,29 @@
             </ul>
         </nav>
         <div class="poem-container">
-        <h1 class="poem-title">Front Porch Adagio</h1>
+        <h1 class="poem-title">Today We Found About You</h1>
         <p>
-            I'm not certain what it means to love,
-			<br/>
-            in a country that freely flings itself, 
-			<br/>
-            into sweaty palms of pestilence.
-			<br/>
-			<br/>
-            We live in the land of the free,
-			<br/>
-            but is there room in the inn,
-			<br/>
-            for those brave enough to choose life?
-			<br/>
-			<br/>
-            Or at least a meaningful death?
-			<br/>
-            I'd much rather observe than moralize,
-			<br/>
-            too often the weight leads me to agonize.
-			<br/>
-			<br/>
-            How can so many define,
-			<br/>
-            life's meaning as simply breathing,
-			<br/>
-            and not something more divine?
-			<br/>
+            Today we found about you. 
+            <br><br/>
+            if you'll be, you'll be,
+            <br><br/>
+            and we want you to be.
+            <br><br/>
+            I cannot see you,
+            <br><br/>
+            but you shine through,
+            <br><br/>
+            in every idea
+            <br><br/>
+            in every possibility.
+            <br><br/>
+            A bright beginning,
+            <br><br/>
+            a destined dawning,
+            <br><br/>
+            of a new and perfectly,
+            <br><br/>
+            imperfect phase.
 		</p>
         </div>
     </body>
