--- a/poems/unshining-stars.html
+++ b/poems/unshining-stars.html
@@ -21,35 +21,24 @@
             </ul>
         </nav>
         <div class="poem-container">
-        <h1 class="poem-title">Front Porch Adagio</h1>
+        <h1 class="poem-title">An Ode to Unshining Stars</h1>
         <p>
-            I'm not certain what it means to love,
-			<br/>
-            in a country that freely flings itself, 
-			<br/>
-            into sweaty palms of pestilence.
-			<br/>
-			<br/>
-            We live in the land of the free,
-			<br/>
-            but is there room in the inn,
-			<br/>
-            for those brave enough to choose life?
-			<br/>
-			<br/>
-            Or at least a meaningful death?
-			<br/>
-            I'd much rather observe than moralize,
-			<br/>
-            too often the weight leads me to agonize.
-			<br/>
-			<br/>
-            How can so many define,
-			<br/>
-            life's meaning as simply breathing,
-			<br/>
-            and not something more divine?
-			<br/>
+            Constellations guide us
+            <br><br/>
+            when other stars lay out.
+            <br><br/>
+            If all the sky stayed shining,
+            <br><br/>
+            we’d stare blissfully no doubt. 
+            <br><br/>
+            <br><br/>
+            I stumble as I stretch,
+            <br><br/>
+            to feel what can’t be seen.
+            <br><br/>
+            Discovering a single path,
+            <br><br/>
+            within the dark between.
 		</p>
         </div>
     </body>
