--- a/poems.html
+++ b/poems.html
@@ -23,8 +23,8 @@
         <div class="poetry-container">
             <article class="poem-block">
                 <section class="poem-img">
-                    <a href="poems/captain_planet">
-                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    <a href="poems/captain-planet">
+                        <img src="img/captain-planet.png" alt="boy watching a captain planet like cartoon">
                     </a>
                 </section>
                 <section class="poem-meta">
