--- a/poems/all-the-thoughts.html
+++ b/poems/all-the-thoughts.html
@@ -21,35 +21,31 @@
             </ul>
         </nav>
         <div class="poem-container">
-        <h1 class="poem-title">Front Porch Adagio</h1>
+        <h1 class="poem-title">All the thoughts I don’t think about</h1>
         <p>
-            I'm not certain what it means to love,
-			<br/>
-            in a country that freely flings itself, 
-			<br/>
-            into sweaty palms of pestilence.
-			<br/>
-			<br/>
-            We live in the land of the free,
-			<br/>
-            but is there room in the inn,
-			<br/>
-            for those brave enough to choose life?
-			<br/>
-			<br/>
-            Or at least a meaningful death?
-			<br/>
-            I'd much rather observe than moralize,
-			<br/>
-            too often the weight leads me to agonize.
-			<br/>
-			<br/>
-            How can so many define,
-			<br/>
-            life's meaning as simply breathing,
-			<br/>
-            and not something more divine?
-			<br/>
+            Our love shouts the loudest
+            <br/>
+            in the quiet of my mind.
+            <br/>
+            It shines its light the brightest
+            <br/>
+            in the sadness I can’t find.
+            <br/>
+            Words flail and fail to capture,
+            <br/>
+            negative space that you create.
+            <br/>
+            The thoughts that I don’t think about,
+            <br/>
+            void more than I appreciate.
+            <br/>
+            If I could phrase a fraction
+            <br/>
+            of the fears I don’t possess,
+            <br/>
+            The whole of our love would be revealed,
+            <br/>
+            in buttons we never press.
 		</p>
         </div>
     </body>
