--- a/poems/come-on-down.html
+++ b/poems/come-on-down.html
@@ -23,33 +23,31 @@
         <div class="poem-container">
         <h1 class="poem-title">Front Porch Adagio</h1>
         <p>
-            I'm not certain what it means to love,
-			<br/>
-            in a country that freely flings itself, 
-			<br/>
-            into sweaty palms of pestilence.
-			<br/>
-			<br/>
-            We live in the land of the free,
-			<br/>
-            but is there room in the inn,
-			<br/>
-            for those brave enough to choose life?
-			<br/>
-			<br/>
-            Or at least a meaningful death?
-			<br/>
-            I'd much rather observe than moralize,
-			<br/>
-            too often the weight leads me to agonize.
-			<br/>
-			<br/>
-            How can so many define,
-			<br/>
-            life's meaning as simply breathing,
-			<br/>
-            and not something more divine?
-			<br/>
+            Uniquely American myths,
+            <br/>
+            asking us to dream,
+            <br/>
+            meeting us where we are,
+            <br/>
+            commanding us it seems. 
+            <br/>
+            <br/>
+            Venture out, 
+            <br/>
+            but not too far.
+            <br/>
+            Make a life, 
+            <br/>
+            but do not live.
+            <br/>
+            Get what’s yours, 
+            <br/>
+            but do not give.
+            <br/>
+            <br/>
+            You have won,
+            <br/>
+            a brand new car!
 		</p>
         </div>
     </body>
