--- a/poems/front-porch-symphony.html
+++ b/poems/front-porch-symphony.html
@@ -21,35 +21,38 @@
             </ul>
         </nav>
         <div class="poem-container">
-        <h1 class="poem-title">Front Porch Adagio</h1>
+        <h1 class="poem-title">Front Porch Symphony</h1>
         <p>
-            I'm not certain what it means to love,
-			<br/>
-            in a country that freely flings itself, 
-			<br/>
-            into sweaty palms of pestilence.
-			<br/>
-			<br/>
-            We live in the land of the free,
-			<br/>
-            but is there room in the inn,
-			<br/>
-            for those brave enough to choose life?
-			<br/>
-			<br/>
-            Or at least a meaningful death?
-			<br/>
-            I'd much rather observe than moralize,
-			<br/>
-            too often the weight leads me to agonize.
-			<br/>
-			<br/>
-            How can so many define,
-			<br/>
-            life's meaning as simply breathing,
-			<br/>
-            and not something more divine?
-			<br/>
+            A warm summer night and sips of whiskey
+            <br/>
+            I feel this moment like a mystery
+            <br/>
+            It hurts to know she isn't here
+            <br/>
+            growing old, changing, bending an ear
+            <br/>
+            <br/>
+            A sibilant song from an insect chorus
+            <br/>
+            I know their repetitions aren't for me
+            <br/>
+            Just like mine aren't for them 
+            <br/>
+            But then...who are they for?
+            <br/>
+            <br/>
+            A still air surrounds yellow lamplight
+            <br/>
+            It isn't quiet but cars pass slower
+            <br/>
+            I well up a little when I imagine
+            <br/>
+            the things she would say. 
+            <br/>
+            <br/>
+            But I was of her repetitions
+            <br/>
+            they weren’t for me.
 		</p>
         </div>
     </body>
