--- a/poems/hello-world.html
+++ b/poems/hello-world.html
@@ -21,35 +21,21 @@
             </ul>
         </nav>
         <div class="poem-container">
-        <h1 class="poem-title">Front Porch Adagio</h1>
+        <h1 class="poem-title">Hello world.</h1>
         <p>
-            I'm not certain what it means to love,
-			<br/>
-            in a country that freely flings itself, 
-			<br/>
-            into sweaty palms of pestilence.
-			<br/>
-			<br/>
-            We live in the land of the free,
-			<br/>
-            but is there room in the inn,
-			<br/>
-            for those brave enough to choose life?
-			<br/>
-			<br/>
-            Or at least a meaningful death?
-			<br/>
-            I'd much rather observe than moralize,
-			<br/>
-            too often the weight leads me to agonize.
-			<br/>
-			<br/>
-            How can so many define,
-			<br/>
-            life's meaning as simply breathing,
-			<br/>
-            and not something more divine?
-			<br/>
+            A momentous day. 
+            <br/>
+            I felt you for the first time. 
+            <br/>
+            Through your mother's cool skin. 
+            <br/>
+            Your something on my hand. 
+            <br/>
+            A bump but more than that. 
+            <br/>
+            A connection but more than that. 
+            <br/>
+            A life against all odds making its presence known.
 		</p>
         </div>
     </body>
