--- a/poems/in-the-belly.html
+++ b/poems/in-the-belly.html
@@ -21,35 +21,42 @@
             </ul>
         </nav>
         <div class="poem-container">
-        <h1 class="poem-title">Front Porch Adagio</h1>
+        <h1 class="poem-title">In the belly, surrounded by the beast</h1>
         <p>
-            I'm not certain what it means to love,
-			<br/>
-            in a country that freely flings itself, 
-			<br/>
-            into sweaty palms of pestilence.
-			<br/>
-			<br/>
-            We live in the land of the free,
-			<br/>
-            but is there room in the inn,
-			<br/>
-            for those brave enough to choose life?
-			<br/>
-			<br/>
-            Or at least a meaningful death?
-			<br/>
-            I'd much rather observe than moralize,
-			<br/>
-            too often the weight leads me to agonize.
-			<br/>
-			<br/>
-            How can so many define,
-			<br/>
-            life's meaning as simply breathing,
-			<br/>
-            and not something more divine?
-			<br/>
+            Man has sailed through greater storms. 
+            <br/>
+            under emptier night skies. 
+            <br/>
+            weary hearts casting doubts,
+            <br/>
+            As a roiling ocean swarms
+            <br/>
+            <br/>
+            Does it always get to win?
+            <br/>
+            This damned sea.
+            <br/>
+            Can it take from me, what I refuse to give?
+            <br/>
+            My life, my will to fight again?
+            <br/>
+            <br/>
+            I will not wash away
+            <br/>
+            or be blotted from the Earth. 
+            <br/>
+            I’ll bottle up what’s left of me
+            <br/>
+            Trust that it still has worth.
+            <br/>
+            <br/>
+            The water’s not yet in
+            <br/>
+            the wood inside’s still dry. 
+            <br/>
+            But I smell each salty warning,
+            <br/>
+            and I hear each wave’s foul cry.
 		</p>
         </div>
     </body>
