--- a/poems/orange.html
+++ b/poems/orange.html
@@ -21,35 +21,23 @@
             </ul>
         </nav>
         <div class="poem-container">
-        <h1 class="poem-title">Front Porch Adagio</h1>
+        <h1 class="poem-title">Orange</h1>
         <p>
-            I'm not certain what it means to love,
-			<br/>
-            in a country that freely flings itself, 
-			<br/>
-            into sweaty palms of pestilence.
-			<br/>
-			<br/>
-            We live in the land of the free,
-			<br/>
-            but is there room in the inn,
-			<br/>
-            for those brave enough to choose life?
-			<br/>
-			<br/>
-            Or at least a meaningful death?
-			<br/>
-            I'd much rather observe than moralize,
-			<br/>
-            too often the weight leads me to agonize.
-			<br/>
-			<br/>
-            How can so many define,
-			<br/>
-            life's meaning as simply breathing,
-			<br/>
-            and not something more divine?
-			<br/>
+            Orange invades blue places,
+            <br/>
+            choking miles in black smoke.
+            <br/>
+            Orange captivates white spaces,
+            <br/>
+            stoking violence without cloak.
+            <br/>
+            Light breaks anew with choices, 
+            <br/>
+            when the fire’s thirst is quenched.
+            <br/>
+            Air cleansed by rising voices,
+            <br/>
+            sin’s silent power wrenched. 
 		</p>
         </div>
     </body>
