--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
         <title>Doug Branson Codes</title>
     </head>
     <body>
-        <h1>Doug Branson Codes</h1>
-        <p><a href="about.html">About</a></p>
-        <p><a href="projects.html">Projects</a></p>
-        <div class="quote-container">
-            <p id="quotes"></p>
-            <p id="author"></p>
-            <button id="generate"></button>
+        <div class="wrapper">
+            <h1>Doug Branson Codes</h1>
+            <p><a href="about.html">About</a></p>
+            <p><a href="projects.html">Projects</a></p>
+            <div class="quote-container">
+                <p id="quotes"></p>
+                <p id="author"></p>
+                <button id="generate"></button>
+            </div>
         </div>
     </body>
 </html>
